@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/zeta riemannr li/;
+use Math::Prime::Util::GMP qw/zeta riemannr li ei/;
 
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
@@ -50,7 +50,8 @@ plan tests => 1 + scalar(keys %rv) + 2 +
             + ($extra ? (1 + $zeta_prec_tests + 1) : 0)
             + 7 + 5
             + 1    # riemannr non-int
-            + 4;   # li
+            + 4    # li
+            + 3;   # ei
 
 is_deeply( [map { zeta($_,46) } 2 .. 20],
            \@zeta,
@@ -118,3 +119,9 @@ is(li("1.000000000000000000000000000000000000000000020886719363263",15), "-100.0
 is(li("1.000000000000000000000000000000000000000000020886719363263",25), "-99.99999999999996881196016", "li(1.0000...2088..,25)");
 is(li(123456789,71), "7028122.5948718879000781801820670643068975005319034275491399869081030876", "li(123456789,71)");
 is(li("1" . "3" x 48, 71), "12143015694679233755826665180456251925892758147.144721437041059310430449", "li(13333....333,71)");
+
+############ ei
+
+is(ei("-.999999",71),"-.21938430227532932486722325953484931808376271553585943741535217668894641", "ei(-.999999)");
+is(ei(".0000001",71),"-15.540879886056784427519372537151549799926662195341116860222690550334380", "ei(-.0000001)");
+is(ei(123,71),"2147292057663749807443512898798152106344989006252421.1953818484307608884", "ei(123)");
